--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,12 @@
             <artifactId>avalon-framework</artifactId>
             <version>4.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
